<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conversion_welcome_message"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />
    <Spinner
        android:id="@+id/conversion_currency_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/currency_value_from"
        android:layout_below="@+id/tv_display"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/second_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conversion_currency_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:text="Please Enter rates of currencies you want to change" />
    <TextView
        android:id="@+id/tb_aud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/AUD"
        android:layout_below="@+id/second_text"
        />

    <TextView
        android:id="@+id/tb_cad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tb_aud"
        android:layout_below="@+id/tb_aud"
        android:layout_marginTop="24dp"
        android:text="@string/CAD" />

    <TextView
        android:id="@+id/tb_eur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/EUR"
        android:layout_below="@+id/tb_cad"
        android:layout_alignStart="@+id/GBP" />

    <TextView
        android:id="@+id/tb_gbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/GBP"
        android:layout_below="@+id/tb_eur"
        android:layout_alignStart="@+id/CAD" />

    <TextView
        android:id="@+id/tb_jpy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/JPY"
        android:layout_below="@+id/tb_gbp"
        android:layout_alignStart="@+id/tb_gbp" />

    <TextView
        android:id="@+id/tb_usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/USD"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/tb_jpy"
        android:layout_alignStart="@+id/tb_jpy" />

    <EditText
        android:id="@+id/conv_aud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="middle"
        android:hint="1.0"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/tb_aud"
        android:layout_alignBottom="@+id/tb_aud"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/conv_cad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="1.0"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/tb_cad"
        android:layout_alignBottom="@+id/tb_cad"
        android:layout_alignParentEnd="true" />




    <EditText
        android:id="@+id/conv_eur"
        android:hint="1.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/conv_cad"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/conv_gbp"
        android:layout_width="wrap_content"
        android:hint="1.0"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/tb_gbp"
        android:layout_alignBottom="@+id/tb_gbp"
        android:layout_alignParentEnd="true" />



    <EditText
        android:id="@+id/conv_jpy"
        android:hint="1.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/tb_jpy"
        android:layout_alignBottom="@+id/tb_jpy"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/conv_usd"
        android:layout_width="wrap_content"
        android:hint="1.0"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/tb_usd"
        android:layout_alignBottom="@+id/tb_usd"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Submit Exchange Rates"
        android:layout_below="@+id/tb_usd"
        android:onClick="editRates"
        android:layout_centerHorizontal="true" />


</RelativeLayout>